2.0.0-beta1 (2013-??-??)
	* Added: HTTP Status 451 Unavailable For Legal Reasons. Fight government
	  censorship!
	* Added: Ability to catch and retry http requests in the client when a
	  curl error occurs.

2.0.0-alpha4 (2013-08-07)
	* Fixed: Doing a GET request with the client uses the last used HTTP
	  method instead.
	* Added: HttpException
	* Added: The Client class can now automatically emit exceptions when HTTP
	  errors occurred.

2.0.0-alpha3 (2013-07-24)
	* Changed: Now depends on sabre/event package.
	* Changed: setHeaders() now overwrites any existing http headers.
	* Added: getQueryParameters to RequestInterface.
	* Added: Util::negotiate.
	* Added: RequestDecorator, ResponseDecorator.
	* Added: A very simple HTTP client.
	* Added: addHeaders() to append a list of new headers.
	* Fixed: Not erroring on unknown HTTP status codes.
	* Fixed: Throwing exceptions on invalid HTTP status codes (not 3 digits).
	* Fixed: Much better README.md
	* Changed: getBody() now uses a bitfield to specify what type to return.

2.0.0-alpha2 (2013-07-02)
	* Added: Digest & AWS Authentication.
	* Added: Message::getHttpVersion and Message::setHttpVersion.
	* Added: Request::setRawServerArray, getRawServerValue.
	* Added: Request::createFromPHPRequest
	* Added: Response::send
	* Added: Request::getQueryParameters
	* Added: Utility for dealing with HTTP dates.
	* Added: Request::setPostData and Request::getPostData.
	* Added: Request::setAbsoluteUrl and Request::getAbsoluteUrl.
	* Added: URLUtil, methods for calculation relative and base urls.
	* Removed: Response::sendBody

2.0.0-alpha1 (2012-10-07)
	* Fixed: Lots of small naming improvements
	* Added: Introduction of Message, MessageInterface, Response,
	  ResponseInterface.

Before 2.0.0, this package was built-into SabreDAV, where it first appeared in
January 2009.