@@ -3,6 +3,8 @@
 	  censorship!
 	* Added: Ability to catch and retry http requests in the client when a
 	  curl error occurs.
+	* Changed: Request::getPath does not return the query part of the url, so
+	  everything after the ? is stripped.
 
 2.0.0-alpha4 (2013-08-07)
 	* Fixed: Doing a GET request with the client uses the last used HTTP
